--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal de Jogos</title>
+    <link rel="icon" href="https://img.icons8.com/ios-filled/50/apple-arcade.png" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -51,10 +52,13 @@
         .game a:hover {
             text-decoration: underline;
         }
+        .logo {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
-    <h1>https://img.icons8.com/ios-filled/50/apple-arcade.png</h1>
+    <img src="https://img.icons8.com/ios-filled/50/apple-arcade.png" alt="Site Logo" class="logo">
     <h1>Bem-vindo ao Portal de Jogos!</h1>
     <p>Escolha um jogo para começar:</p>
     <div class="game-container">
