--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="game-container">
         <div class="game">
             <img src="thumbs/jogo1.png" alt="Jogo 1">
-            <a href="jogo1/index.html">Jogo 1</a>
+            <a href="jogo1/index.html">BLÉF!</a>
         </div>
         <div class="game">
             <img src="thumbs/jogo2.png" alt="Jogo 2">
