--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <div class="game">
             <img src="thumbs/jogo2.png" alt="Jogo 2">
-            <a href="jogo2/index.html">Jogo 2</a>
+            <a href="jogo2/index.html">ANTFARM SIMULATOR</a>
         </div>
         <div class="game">
             <img src="thumbs/jogo3.png" alt="Jogo 3">
