--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <img src="https://img.icons8.com/ios-filled/50/apple-arcade.png" alt="Site Logo" class="logo">
-    <h1>Bem-vindo ao Portal de Jogos!</h1>
+    <h1>BEM-VINDO AO ARCADEHUB</h1>
     <p>Escolha um jogo para começar:</p>
     <div class="game-container">
         <div class="game">
