--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class="game">
             <img src="thumbs/jogo3.png" alt="Jogo 3">
-            <a href="jogo3/index.html">Jogo 3</a>
+            <a href="jogo3/index.html">DUNGEON SCAPE</a>
         </div>
     </div>
 </body>
