--- a/index.html
+++ b/index.html
@@ -52,6 +52,23 @@
         .game a:hover {
             text-decoration: underline;
         }
+        .tip-container {
+            margin-top: 30px;
+            font-size: 18px;
+        }
+        .tip-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #0066cc;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+        .tip-button:hover {
+            background-color: #004f99;
+        }
         .logo {
             margin-top: 20px;
         }
@@ -74,6 +91,11 @@
             <img src="thumbs/jogo3.png" alt="Jogo 3">
             <a href="jogo3/index.html">DUNGEON SCAPE</a>
         </div>
+    </div>
+
+    <div class="tip-container">
+        <p>Gostou do nosso portal? Você pode nos apoiar com uma pequena contribuição para ajudar a manter o site no ar!</p>
+        <a href="https://www.paypal.com/donate?hosted_button_id=SEU_ID_AQUI" class="tip-button" target="_blank">Faça uma doação</a>
     </div>
 </body>
 </html>
